--- a/style.css
+++ b/style.css
@@ -173,7 +173,7 @@ a:hover {
   display: inline-block;
   width: 300px;
   margin: 10px;
-  padding:20px 10px;
+  padding:10 10px;
   border: 1px solid #dedada;
   text-align: center;
   background-color: #cbc2c2eb;
