--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 }
 
 body {
-  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   background-image: url(images/abd.jpg);
   background-size: cover;
   background-attachment: fixed;
@@ -24,17 +24,16 @@ nav {
   color: #000000cc;
   font-size: 35px;
   line-height: 40px;
-  padding: 10 15px;
+  padding: 10px 15px;
   font-weight: bold;
   display: inline-block;
- font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
 nav ul {
   float: right;
   margin-right: 20px;
-  margin-top: -6vh;
- 
+  margin-top: -9vh;
 }
 
 nav ul li {
@@ -90,7 +89,6 @@ a:hover {
     left: -100%;
     text-align: center;
     transition: all .5s;
-    
   }
   nav ul li {
     display: block;
@@ -108,25 +106,23 @@ a:hover {
   }
   #check:checked ~ ul {
     left: 0;
-    display:block;
+    display: block;
   }
- #check:hover{
-  display: none;
- }
+  #check:hover {
+    display: none;
+  }
 }
 
 .banner {
   text-align: center;
   padding-top: 200px;
-  font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
   font-weight: bold;
-  
 }
 
 .banner p {
   color: rgba(20, 31, 28, 0.768);
   font-size: 25px;
-  
 }
 
 .explore-btn {
@@ -173,10 +169,11 @@ a:hover {
   display: inline-block;
   width: 300px;
   margin: 10px;
-  padding:10 10px;
+  padding: 10px;
   border: 1px solid #dedada;
   text-align: center;
   background-color: #cbc2c2eb;
+  transition: transform 0.2s;
 }
 
 .course img {
@@ -185,7 +182,6 @@ a:hover {
   object-fit: cover;
   margin-bottom: 10px;
 }
-
 
 .course h3 {
   margin-bottom: 10px;
@@ -204,12 +200,8 @@ a:hover {
   margin-top: 10px;
 }
 
-.course {
-  transition: transform 0.2s;
-}
-
 .course:hover {
-  transform: scale(1.1);
+  transform:scale(1.1);
 }
 
 .teachers {
@@ -227,7 +219,7 @@ a:hover {
 .teacher {
   display: inline-block;
   margin: 20px;
-  padding:  18px 20px;
+  padding: 18px 20px;
   border: 1px solid #dedada;
   text-align: center;
   background-color: #cbc2c2eb;
@@ -236,7 +228,7 @@ a:hover {
 .teacher img {
   width: 270px;
   height: 270px;
-  object-fit:cover;
+  object-fit: cover;
   margin-bottom: 5px;
 }
 
@@ -247,15 +239,16 @@ a:hover {
 .teacher p {
   color: #000000;
 }
-.details p{
+
+.details p {
   display: block;
   font-size: 24px;
   font-style: oblique;
   font-feature-settings: "abvf";
   font-family: Arial, Helvetica, sans-serif;
   background-color: #a4a9ad;
-   
 }
+
 #mentorship {
   background-color: #c4abab;
   padding: 40px;
@@ -306,7 +299,6 @@ a:hover {
   margin-bottom: 10px;
 }
 
-
 @media only screen and (max-width: 768px) {
   nav ul {
     flex-direction: column;
@@ -325,6 +317,4 @@ a:hover {
   .banner p {
     font-size: 16px;
   }
-
-
 }
